aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__simple_list.snap
---
source: aml-syntax/src/expressions/tests.rs
expression: parse(input)
---
List:
  items:
    - Primitive:
        value:
          Int: 1
        location:
          start_byte: 1
          end_byte: 2
        original: "1"
    - Primitive:
        value:
          Int: 2
        location:
          start_byte: 4
          end_byte: 5
        original: "2"
    - Ident:
        value: a
        location:
          start_byte: 7
          end_byte: 8
    - Primitive:
        value:
          Int: 4
        location:
          start_byte: 10
          end_byte: 11
        original: "4"
  location:
    start_byte: 0
    end_byte: 12
  original: "[1, 2, a, 4]"
