aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__unclosed_curly_brace.snap
---
source: aml-syntax/src/expressions/tests.rs
expression: parse(input)
---
Map:
  items:
    - - Ident:
          value: a
          location:
            start_byte: 1
            end_byte: 2
      - Primitive:
          value:
            Int: 1
          location:
            start_byte: 4
            end_byte: 5
          original: "1"
    - - Ident:
          value: b
          location:
            start_byte: 7
            end_byte: 8
      - Primitive:
          value:
            Int: 2
          location:
            start_byte: 10
            end_byte: 11
          original: "2"
    - - Error:
          token: Eof
          location:
            start_byte: 10
            end_byte: 11
          original: "2"
      - Error:
          token: Eof
          location:
            start_byte: 10
            end_byte: 11
          original: "2"
  location:
    start_byte: 0
    end_byte: 11
  original: "{a: 1, b: 2"
